Oppdatering på design og flyttet tekst til toppbar

--- a/public/home/home.view.html
+++ b/public/home/home.view.html
@@ -1,5 +1,5 @@
 <div class="col-md-12">
-  <h1>This is the home page</h1>
+  <h1>Kalender</h1>
   <ul>
     <li ng-repeat="konsert in firebaseDb.konserter">
       <p>Artist: {{konsert.artist}}</p>
