--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <!-- Local scripts -->
     <script src="app.js" type="text/javascript"></script>
-    <script src="home/home.controller.js" charset="utf-8"></script>
+    <script src="arrangementer/arrangementer.controller.js" charset="utf-8"></script>
     <script src="login/login.controller.js" charset="utf-8"></script>
     <script src="profile/profile.controller.js" charset="utf-8"></script>
     <script src="new-booking/new-booking.controller.js" charset="utf-8"></script>
