--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
           <div class="col-md-5">
             <nav class="nav-left">
               <ul>
-                <li ng-show="(currentUser != null)"><a href="/#/">Kalender</a></li>
+                <li ng-show="(currentUser != null)"><a href="/#/">Arrangementer</a></li>
               </ul>
             </nav>
           </div>
