Fikset bug med dato-objektet for safari brukere.

--- a/public/arrangementer/arrangementer.view.html
+++ b/public/arrangementer/arrangementer.view.html
@@ -1,6 +1,6 @@
 <div class="col-md-12">
   <h1>Arrangementer:</h1>
-  <input id="search" name="search" placeholder="Søk i bookinger" type="search" ng-model="searchingString" ng-change="filterFunction()">
+  <input id="search" name="search" placeholder="Søk i arrangementer" type="search" ng-model="searchingString" ng-change="filterFunction()">
   <br><br>
   <select ng-model="valgtSjanger" ng-change="filterFunction()">
     <option value="velg">Velg sjanger</option>
