--- a/public/rapportoversikt/rapportoversikt.view.html
+++ b/public/rapportoversikt/rapportoversikt.view.html
@@ -1,14 +1,25 @@
-<div class="col-md-12 view-container" id="arrangementer-view">
-  <h1>Bookinger:</h1>
-  <input id="search" name="search" placeholder="Søk i bookinger" type="search" ng-model="searchingString" ng-change="filterFunction()">
+<div class="col-md-12">
+  <h1>Arrangementer:</h1>
+  <input id="search" name="search" placeholder="Søk i arrangementer" type="search" ng-model="searchingString" ng-change="filterFunction()">
   <br><br>
-  <select ng-model="valgtStatus" ng-change="filterFunction()">
-    <option value="velg">Velg status</option>
-    <option value="aktiv">Aktiv</option>
-    <option value="avvist_av_bookingsjef">Avvist av bookingsjef</option>
-    <option value="avvist_av_manager">Avvist av manager</option>
-    <option value="godkjent_av_bookingsjef">Godkjent av bookingsjef</option>
-    <option value="ubesvart">Ubesvart</option>
+  <select ng-model="valgtSjanger" ng-change="filterFunction()">
+    <option value="velg">Velg sjanger</option>
+    <option value="Alternativ">Alternativ</option>
+    <option value="Blues">Blues</option>
+    <option value="Country">Country</option>
+    <option value="Dance">Dance</option>
+    <option value="Elektronisk">Elektronisk</option>
+    <option value="Folk">Folk</option>
+    <option value="Hip Hop">Hip Hop</option>
+    <option value="Indie">Indie</option>
+    <option value="Jazz">Jazz</option>
+    <option value="Klassisk">Klassisk</option>
+    <option value="Norsk">Norsk</option>
+    <option value="Opera">Opera</option>
+    <option value="Pop">Pop</option>
+    <option value="R&amp;B">R&amp;B</option>
+    <option value="Reggae">Reggae</option>
+    <option value="Rock">Rock</option>
   </select>
   <select ng-model="valgtScene" ng-change="filterFunction()">
     <option value="velg">Velg scene</option>
@@ -17,40 +28,23 @@
     <option value="Knaus">Knaus</option>
     <option value="Storsalen">Storsalen</option>
   </select>
-    <h2 ng-hide="((valgtScene == 'velg') && (valgtStatus == 'velg') && ((searchingString == undefined) || (searchingString == '')))">Søkeresultat</h2>
+  <input type="checkbox" name="vehicle" ng-model="visTidligereArrangementer" ng-change="filterFunction()">Vis tidligere arrangementer
+    <h2 ng-hide="((valgtScene == 'velg') && (valgtSjanger == 'velg') && ((searchingString == undefined) || (searchingString == '')))">Søkeresultat</h2>
   <ul>
     <li ng-repeat="(key, value) in filtrertListe">
-      <h2>{{key}}</h2>
+      <h2>{{intToDateFunction(key).toDateString()}}</h2>
       <ul>
         <li ng-repeat="(key, konsert) in value" ng-init="showAvvisForm = false">
           <p><b>Artist:</b> {{konsert.artist}}</p>
           <p><b>Scene:</b> {{konsert.scene}}</p>
           <p><b>Tid:</b> {{konsert.tid}}</p>
           <p><b>Billettpris:</b> {{konsert.billettpris}}</p>
+          <p><b>Sjanger:</b> {{konsert.sjanger}}</p>
           <p><b>Status:</b> {{konsert.status}}</p>
-          <p ng-show="(konsert.status == 'avvist_av_bookingsjef') || (konsert.status == 'avvist_av_manager')"><b>Kommentar for avvisning:</b> {{konsert.kommentar_for_avvisning}}</p>
-          <button ng-show="(konsert.status == 'ubesvart') && (currentUserInformation.stilling == 'bookingsjef')" ng-click="updateBookingStatus(key, 'godkjent_av_bookingsjef'); filterFunction()">Godkjenn</button>
-          <button ng-show="(konsert.status == 'ubesvart') && (currentUserInformation.stilling == 'bookingsjef')" ng-click="showAvvisForm = !showAvvisForm">Avvis</button>
-          <button ng-show="(konsert.status == 'godkjent_av_bookingsjef') && (currentUserInformation.stilling == 'bookingansvarlig')" ng-click="updateBookingStatus(key, 'aktiv'); filterFunction()">Legg til arrangemnent</button>
-          <button ng-show="(konsert.status == 'godkjent_av_bookingsjef') && (currentUserInformation.stilling == 'bookingansvarlig')" ng-click="showAvvisForm = !showAvvisForm">Avvis</button>
-          <form name="avvisForm" ng-show="showAvvisForm == true">
-            <h3>Fyll ut hvorfor ikke:</h3>
-            <div class="form-group" show-errors>
-              <label>Kommentar: <input type="text" class="form-control" name="kommentar" ng-model="avvisning.kommentar" required /></label>
-            </div>
-            <button ng-click="avvisBooking(key, avvisning.kommentar); filterFunction()" type="submit" ng-disabled="avvisForm.$invalid" class="btn btn-primary">Send avvisning</button>
-          </form>
           <br>
         </li>
       </ul>
     </li>
   </ul>
 </div>
-
-<form name="bookingForm" ng-show="avvistBooking == true">
-    <h1>Fyll ut hvorfor ikke:</h1>
-    <div class="form-group" show-errors>
-      <label>Artist: <input type="text" class="form-control" name="artist" ng-model="booking.artist" required /></label>
-    </div>
-    <button ng-click="sendBooking(booking)" type="submit" ng-disabled="bookingForm.$invalid" class="btn btn-primary">Send</button>
-  </form>
+</div>
