--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
                 <li ng-show="(currentUser != null) && ((currentUserInformation.stilling == 'bookingsjef') || (currentUserInformation.stilling == 'bookingansvarlig'))"><a href="/#/bookingoversikt">Bookinger</a></li>
                 <li ng-show="(currentUser != null) && (currentUserInformation.stilling == 'bookingansvarlig')"><a href="/#/new-booking">+ Ny booking</a></li>
                 <li ng-show="(currentUser != null) && ((currentUserInformation.stilling == 'bookingansvarlig') || (currentUserInformation.stilling == 'arrangør'))"><a href="/#/new-rapport">+ Ny rapport</a></li>
-                <li ng-show="(currentUser != null) && (currentUserInformation.stilling == 'bookingsjef')"><a href="/#/rapportoversikt ">Rapporter</a></li>
+                <li ng-show="(currentUser != null) && (currentUserInformation.stilling == 'bookingsjef')"><a href="/#/rapportoversikt">Rapporter</a></li>
               </ul>
             </nav>
           </div>
@@ -82,6 +82,7 @@
     <script src="profile/profile.controller.js" charset="utf-8"></script>
     <script src="new-booking/new-booking.controller.js" charset="utf-8"></script>
     <script src="bookingoversikt/bookingoversikt.controller.js" charset="utf-8"></script>
+    <script src="rapportoversikt/rapportoversikt.controller.js" charset="utf-8"></script>
     <script src="js/services/firebase.service.js" charset="utf-8"></script>
   </body>
 </html>
