--- a/public/rapportoversikt/rapportoversikt.view.html
+++ b/public/rapportoversikt/rapportoversikt.view.html
@@ -1,6 +1,6 @@
 <div class="col-md-12">
-  <h1>Arrangementer:</h1>
-  <input id="search" name="search" placeholder="Søk i arrangementer" type="search" ng-model="searchingString" ng-change="filterFunction()">
+  <h1>Rapporter:</h1>
+  <input id="search" name="search" placeholder="Søk i rapporter" type="search" ng-model="searchingString" ng-change="filterFunction()">
   <br><br>
   <select ng-model="valgtSjanger" ng-change="filterFunction()">
     <option value="velg">Velg sjanger</option>
@@ -41,6 +41,31 @@
           <p><b>Billettpris:</b> {{konsert.billettpris}}</p>
           <p><b>Sjanger:</b> {{konsert.sjanger}}</p>
           <p><b>Status:</b> {{konsert.status}}</p>
+          <!-- Knapp for rapport -->
+          <!-- Endre fra konsert.status til rapport.status når database er klar for det -->
+          <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#rapportModal">Se Rapport</button>
+          <!-- Modal -->
+          <div id="rapportModal" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+              <!-- Modal content-->
+              <div class="modal-content">
+
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal">&times;</button>
+                  <h4 class="modal-title">Rapport</h4>
+                </div>
+
+                <div class="modal-body">
+                  <!-- Info i rapport her -->
+                </div>
+
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+
+              </div>
+            </div>
+          </div>
           <br>
         </li>
       </ul>
