--- a/public/index.html
+++ b/public/index.html
@@ -80,5 +80,6 @@
     <script src="new-booking/new-booking.controller.js" charset="utf-8"></script>
     <script src="bookingoversikt/bookingoversikt.controller.js" charset="utf-8"></script>
     <script src="js/services/firebase.service.js" charset="utf-8"></script>
+    <script src="js/services/spotify.service.js" charset="utf-8"></script>
   </body>
 </html>
