--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
             <nav class="nav-right">
               <ul>
                 <li ng-show="(currentUser != null) && ((currentUserInformation.stilling == 'bookingsjef') || (currentUserInformation.stilling == 'bookingansvarlig'))"><a href="/#/bookingoversikt">Bookingoversikt</a></li>
-                <li ng-show="(currentUser != null) && (currentUserInformation.stilling == 'bookingansvarlig')"><a href="/#/new-booking">+ Ny booking</a></li>
+                <li ng-show="(currentUser != null) && (currentUserInformation.stilling == 'bookingansvarlig')"><a href="/#/ny-booking">+ Ny booking</a></li>
               </ul>
             </nav>
           </div>
@@ -77,7 +77,7 @@
     <script src="app.js" type="text/javascript"></script>
     <script src="arrangementer/arrangementer.controller.js" charset="utf-8"></script>
     <script src="login/login.controller.js" charset="utf-8"></script>
-    <script src="new-booking/new-booking.controller.js" charset="utf-8"></script>
+    <script src="ny-booking/ny-booking.controller.js" charset="utf-8"></script>
     <script src="bookingoversikt/bookingoversikt.controller.js" charset="utf-8"></script>
     <script src="js/services/firebase.service.js" charset="utf-8"></script>
     <script src="js/services/spotify.service.js" charset="utf-8"></script>
