--- a/public/arrangementer/arrangementer.view.html
+++ b/public/arrangementer/arrangementer.view.html
@@ -41,7 +41,7 @@
           <p><b>Billettpris:</b> {{konsert.billettpris}}</p>
           <p><b>Sjanger:</b> {{konsert.sjanger}}</p>
           <p><b>Status:</b> {{konsert.status}}</p>
-          <a ng-click="updateModal(konsert)" href="#information-modal" target="_self" class="modal-link" data-toggle="modal"><button type="button" class="btn btn-default">Oversikt</button></a>
+          <a ng-click="hasRapportFunction(key); updateModal(key, konsert)" href="#information-modal" target="_self" class="modal-link" data-toggle="modal"><button type="button" class="btn btn-default">Oversikt</button></a>
           <br>
         </li>
       </ul>
@@ -49,8 +49,8 @@
   </ul>
 </div>
 </div>
-<div class="item-modal modal fade" id="information-modal" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content" style="width:100%; height:101%;"> <!-- FJERN CSS NÅR EKSTERN CSS-FIL LEGGES TIL -->
+<div class="item-modal modal fade" id="information-modal" tabindex="-1" role="dialog" aria-hidden="true" ng-init="showRapport = false">
+        <div class="modal-content" style="width:75%; min-height:101%; margin: 0 auto;"> <!-- FJERN CSS NÅR EKSTERN CSS-FIL LEGGES TIL -->
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
                     <div class="rl">
@@ -68,10 +68,16 @@
                           <p><b>Billettpris:</b> {{modalInformation.billettpris}}</p>
                           <p><b>Sjanger:</b> {{modalInformation.sjanger}}</p>
                           <p><b>Status:</b> {{modalInformation.status}}</p>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                            <button type="button" class="btn btn-default" ng-show="hasRapport == true;" ng-click="showRapport = !showRapport">Vis rapport</button>
                         </div>
                     </div>
                 </div>
+            </div>
+            <div name="modalRapport" ng-show="showRapport == true" style="border: 1px dotted black; width: 800px; height: 800px; margin: 20px auto;">
+              <h2>Rapport:</h2>
+              <p><b>Publikumstall:</b> {{modalRapport.publikumstall}}</p>
+              <p><b>profitt:</b> {{modalRapport.profitt}}</p>
+              <p><b>tilleggskostnader:</b> {{modalRapport.tilleggskostnader}}</p>
             </div>
         </div>
     </div>
