--- a/public/arrangementer/arrangementer.view.html
+++ b/public/arrangementer/arrangementer.view.html
@@ -68,7 +68,8 @@
                           <p><b>Billettpris:</b> {{modalInformation.billettpris}}</p>
                           <p><b>Sjanger:</b> {{modalInformation.sjanger}}</p>
                           <p><b>Status:</b> {{modalInformation.status}}</p>
-                            <button type="button" class="btn btn-default" ng-show="hasRapport == true;" ng-click="showRapport = !showRapport">Vis rapport</button>
+                            <button type="button" class="btn btn-default" ng-show="hasRapport == true && showRapport == false;" ng-click="showRapport = !showRapport">Vis rapport</button>
+                            <button type="button" class="btn btn-default" ng-show="hasRapport == true && showRapport == true;" ng-click="showRapport = !showRapport">Skjul rapport</button>
                         </div>
                     </div>
                 </div>
