--- a/public/new-rapport/new-rapport.view.html
+++ b/public/new-rapport/new-rapport.view.html
@@ -1,5 +1,5 @@
 <div class="col-md-12 view-container" id="arrangementer-view">
-  <h1>Bookinger:</h1>
+  <h1>Ny Rapport:</h1>
   <input id="search" name="search" placeholder="Søk i bookinger" type="search" ng-model="searchingString" ng-change="filterFunction()">
   <br><br>
   <select ng-model="valgtStatus" ng-change="filterFunction()">
