--- a/public/bookingoversikt/bookingoversikt.view.html
+++ b/public/bookingoversikt/bookingoversikt.view.html
@@ -3,10 +3,9 @@
   <div class="row">
     <div class="col-md-12">
     <h1>Bookinger:</h1>
-    <input id="search" class="form-control" name="search" placeholder="Søk i bookinger" type="search" ng-model="searchingString" ng-change="filterFunction()">
+    <input id="search" class="form-control italic" name="search" placeholder="Søk i bookinger" type="search" ng-model="searchingString" ng-change="filterFunction()">
     <br>
     </div>
-
     <div class="col-md-12 form-inline">
       <select class="form-control" ng-model="valgtStatus" ng-change="filterFunction()">
         <option value="velg">Velg status</option>
@@ -24,35 +23,44 @@
         <option value="Storsalen">Storsalen</option>
       </select>
     </div>
-</div>
+  </div>
   <h2 ng-hide="((valgtScene == 'velg') && (valgtStatus == 'velg') && ((searchingString == undefined) || (searchingString == '')))">Søkeresultat</h2>
-  <ul>
-    <li ng-repeat="(key, value) in filtrertListe">
-      <h2>{{key}}</h2>
-      <ul>
-        <li ng-repeat="(key, konsert) in value" ng-init="showAvvisForm = false">
-          <p><b>Artist:</b> {{konsert.artist}}</p>
-          <p><b>Scene:</b> {{konsert.scene}}</p>
-          <p><b>Tid:</b> {{konsert.tid}}</p>
-          <p><b>Billettpris:</b> {{konsert.billettpris}}</p>
-          <p><b>Status:</b> {{konsert.status}}</p>
-          <p ng-show="(konsert.status == 'avvist_av_bookingsjef') || (konsert.status == 'avvist_av_manager')"><b>Kommentar for avvisning:</b> {{konsert.kommentar_for_avvisning}}</p>
-          <button ng-show="(konsert.status == 'ubesvart') && (currentUserInformation.stilling == 'bookingsjef')" ng-click="updateBookingStatus(key, 'godkjent_av_bookingsjef'); filterFunction()">Godkjenn</button>
-          <button ng-show="(konsert.status == 'ubesvart') && (currentUserInformation.stilling == 'bookingsjef')" ng-click="showAvvisForm = !showAvvisForm">Avvis</button>
-          <button ng-show="(konsert.status == 'godkjent_av_bookingsjef') && (currentUserInformation.stilling == 'bookingansvarlig')" ng-click="updateBookingStatus(key, 'aktiv'); filterFunction()">Legg til arrangemnent</button>
-          <button ng-show="(konsert.status == 'godkjent_av_bookingsjef') && (currentUserInformation.stilling == 'bookingansvarlig')" ng-click="showAvvisForm = !showAvvisForm">Avvis</button>
-          <form name="avvisForm" ng-show="showAvvisForm == true">
-            <h3>Fyll ut hvorfor ikke:</h3>
-            <div class="form-group" show-errors>
-              <label>Kommentar: <input type="text" class="form-control" name="kommentar" ng-model="avvisning.kommentar" required /></label>
-            </div>
-            <button ng-click="avvisBooking(key, avvisning.kommentar); filterFunction()" type="submit" ng-disabled="avvisForm.$invalid" class="btn btn-primary">Send avvisning</button>
-          </form>
-          <br>
-        </li>
-      </ul>
-    </li>
-  </ul>
+
+    <div class="row">
+
+    <ul class="list-unstyled">
+      <li ng-repeat="(key, value) in filtrertListe">
+        <!--Dato-->
+        <div class ="row">
+          <div class="col-md-12 dateDesign">
+            <h2>{{key}}</h2>
+          </div>
+        </div>
+        <ul class="list-unstyled">
+          <li ng-repeat="(key, konsert) in value" ng-init="showAvvisForm = false">
+            <p><b>Artist:</b> {{konsert.artist}}</p>
+            <p><b>Scene:</b> {{konsert.scene}}</p>
+            <p><b>Tid:</b> {{konsert.tid}}</p>
+            <p><b>Billettpris:</b> {{konsert.billettpris}}</p>
+            <p><b>Status:</b> {{konsert.status}}</p>
+            <p ng-show="(konsert.status == 'avvist_av_bookingsjef') || (konsert.status == 'avvist_av_manager')"><b>Kommentar for avvisning:</b> {{konsert.kommentar_for_avvisning}}</p>
+            <button ng-show="(konsert.status == 'ubesvart') && (currentUserInformation.stilling == 'bookingsjef')" ng-click="updateBookingStatus(key, 'godkjent_av_bookingsjef'); filterFunction()">Godkjenn</button>
+            <button ng-show="(konsert.status == 'ubesvart') && (currentUserInformation.stilling == 'bookingsjef')" ng-click="showAvvisForm = !showAvvisForm">Avvis</button>
+            <button ng-show="(konsert.status == 'godkjent_av_bookingsjef') && (currentUserInformation.stilling == 'bookingansvarlig')" ng-click="updateBookingStatus(key, 'aktiv'); filterFunction()">Legg til arrangemnent</button>
+            <button ng-show="(konsert.status == 'godkjent_av_bookingsjef') && (currentUserInformation.stilling == 'bookingansvarlig')" ng-click="showAvvisForm = !showAvvisForm">Avvis</button>
+            <form name="avvisForm" ng-show="showAvvisForm == true">
+              <h3>Fyll ut hvorfor ikke:</h3>
+              <div class="form-group" show-errors>
+                <label>Kommentar: <input type="text" class="form-control" name="kommentar" ng-model="avvisning.kommentar" required /></label>
+              </div>
+              <button ng-click="avvisBooking(key, avvisning.kommentar); filterFunction()" type="submit" ng-disabled="avvisForm.$invalid" class="btn btn-primary">Send avvisning</button>
+            </form>
+            <br>
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </div>
 </div>
 
 <form name="bookingForm" ng-show="avvistBooking == true">
