--- a/public/bookingoversikt/bookingoversikt.view.html
+++ b/public/bookingoversikt/bookingoversikt.view.html
@@ -33,29 +33,46 @@
         <!--Dato-->
         <div class ="row">
           <div class="col-md-12 dateDesign">
-            <h2>{{key}}</h2>
+            <h2 class="fontFamily fontSizeDate">{{key}}</h2>
           </div>
         </div>
         <ul class="list-unstyled">
           <li ng-repeat="(key, konsert) in value" ng-init="showAvvisForm = false">
-            <p><b>Artist:</b> {{konsert.artist}}</p>
-            <p><b>Scene:</b> {{konsert.scene}}</p>
-            <p><b>Tid:</b> {{konsert.tid}}</p>
-            <p><b>Billettpris:</b> {{konsert.billettpris}}</p>
-            <p><b>Status:</b> {{konsert.status}}</p>
-            <p ng-show="(konsert.status == 'avvist_av_bookingsjef') || (konsert.status == 'avvist_av_manager')"><b>Kommentar for avvisning:</b> {{konsert.kommentar_for_avvisning}}</p>
-            <button ng-show="(konsert.status == 'ubesvart') && (currentUserInformation.stilling == 'bookingsjef')" ng-click="updateBookingStatus(key, 'godkjent_av_bookingsjef'); filterFunction()">Godkjenn</button>
-            <button ng-show="(konsert.status == 'ubesvart') && (currentUserInformation.stilling == 'bookingsjef')" ng-click="showAvvisForm = !showAvvisForm">Avvis</button>
-            <button ng-show="(konsert.status == 'godkjent_av_bookingsjef') && (currentUserInformation.stilling == 'bookingansvarlig')" ng-click="updateBookingStatus(key, 'aktiv'); filterFunction()">Legg til arrangemnent</button>
-            <button ng-show="(konsert.status == 'godkjent_av_bookingsjef') && (currentUserInformation.stilling == 'bookingansvarlig')" ng-click="showAvvisForm = !showAvvisForm">Avvis</button>
-            <form name="avvisForm" ng-show="showAvvisForm == true">
-              <h3>Fyll ut hvorfor ikke:</h3>
-              <div class="form-group" show-errors>
-                <label>Kommentar: <input type="text" class="form-control" name="kommentar" ng-model="avvisning.kommentar" required /></label>
+
+            <div class="row fontFamily pFontSize">
+              <div class="col-md-3">
+                <p>{{konsert.artist}}</p>
               </div>
-              <button ng-click="avvisBooking(key, avvisning.kommentar); filterFunction()" type="submit" ng-disabled="avvisForm.$invalid" class="btn btn-primary">Send avvisning</button>
-            </form>
-            <br>
+              <div class="col-md-1">
+                <p>{{konsert.tid}}</p>
+              </div>
+              <div class="col-md-1">
+                <p>{{konsert.billettpris}}</p>
+              </div>
+              <div class="col-md-1">
+                <p>{{konsert.scene}}</p>
+              </div>
+              <div class="col-md-3">
+                <p>{{konsert.status}}</p>
+              </div>
+
+              <!--<p ng-show="(konsert.status == 'avvist_av_bookingsjef') || (konsert.status == 'avvist_av_manager')"><b>Kommentar for avvisning:</b> {{konsert.kommentar_for_avvisning}}</p>-->
+              <div class="col-md-3">
+                <button ng-show="(konsert.status == 'ubesvart') && (currentUserInformation.stilling == 'bookingsjef')" ng-click="updateBookingStatus(key, 'godkjent_av_bookingsjef'); filterFunction()">Godkjenn</button>
+                <button ng-show="(konsert.status == 'ubesvart') && (currentUserInformation.stilling == 'bookingsjef')" ng-click="showAvvisForm = !showAvvisForm">Avvis</button>
+                <button class="btn btn-success" ng-show="(konsert.status == 'godkjent_av_bookingsjef') && (currentUserInformation.stilling == 'bookingansvarlig')" ng-click="updateBookingStatus(key, 'aktiv'); filterFunction()">Legg til arrangemnent</button>
+                <button class="btn btn-danger" ng-show="(konsert.status == 'godkjent_av_bookingsjef') && (currentUserInformation.stilling == 'bookingansvarlig')" ng-click="showAvvisForm = !showAvvisForm">Avvis</button>
+                <form name="avvisForm" ng-show="showAvvisForm == true">
+                  <h3>Fyll ut hvorfor ikke:</h3>
+                  <div class="form-group" show-errors>
+                    <label>Kommentar: <input type="text" class="form-control" name="kommentar" ng-model="avvisning.kommentar" required /></label>
+                  </div>
+                  <button ng-click="avvisBooking(key, avvisning.kommentar); filterFunction()" type="submit" ng-disabled="avvisForm.$invalid" class="btn btn-primary">Send avvisning</button>
+                </form>
+              <br>
+            </div>
+
+
           </li>
         </ul>
       </li>
