--- a/public/bookingoversikt/bookingoversikt.view.html
+++ b/public/bookingoversikt/bookingoversikt.view.html
@@ -32,7 +32,7 @@
       <li ng-repeat="(key, value) in filtrertListe">
         <!--Dato-->
         <div class ="row">
-          <div class="col-md-12 dateDesign">
+          <div class="col-lg-12 dateDesign">
             <h2 class="fontFamily fontSizeDate">{{key}}</h2>
           </div>
         </div>
@@ -40,24 +40,24 @@
           <li ng-repeat="(key, konsert) in value" ng-init="showAvvisForm = false">
 
             <div class="row fontFamily pFontSize">
-              <div class="col-md-3">
+              <div class="col-lg-3 alignMiddle border-Right">
                 <p>{{konsert.artist}}</p>
               </div>
-              <div class="col-md-1">
+              <div class="col-lg-1 alignMiddle textAlign border-Right">
                 <p>{{konsert.tid}}</p>
               </div>
-              <div class="col-md-1">
+              <div class="col-lg-1 alignMiddle textAlign border-Right">
                 <p>{{konsert.billettpris}}</p>
               </div>
-              <div class="col-md-1">
+              <div class="col-lg-1 alignMiddle textAlign border-Right">
                 <p>{{konsert.scene}}</p>
               </div>
-              <div class="col-md-3">
+              <div class="col-lg-3 alignMiddle">
                 <p>{{konsert.status}}</p>
               </div>
 
               <!--<p ng-show="(konsert.status == 'avvist_av_bookingsjef') || (konsert.status == 'avvist_av_manager')"><b>Kommentar for avvisning:</b> {{konsert.kommentar_for_avvisning}}</p>-->
-              <div class="col-md-3">
+              <div class="col-lg-3">
                 <button ng-show="(konsert.status == 'ubesvart') && (currentUserInformation.stilling == 'bookingsjef')" ng-click="updateBookingStatus(key, 'godkjent_av_bookingsjef'); filterFunction()">Godkjenn</button>
                 <button ng-show="(konsert.status == 'ubesvart') && (currentUserInformation.stilling == 'bookingsjef')" ng-click="showAvvisForm = !showAvvisForm">Avvis</button>
                 <button class="btn btn-success" ng-show="(konsert.status == 'godkjent_av_bookingsjef') && (currentUserInformation.stilling == 'bookingansvarlig')" ng-click="updateBookingStatus(key, 'aktiv'); filterFunction()">Legg til arrangemnent</button>
