--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 
     <div class="container">
       <div class="row">
-        <div id="header" class="col-md-12">
+        <div id="header" class="col-lg-12">
           <div class="col-md-5">
             <nav class="nav-left">
               <ul>
