--- a/public/bookingoversikt/bookingoversikt.view.html
+++ b/public/bookingoversikt/bookingoversikt.view.html
@@ -1,4 +1,4 @@
-<div class="col-md-12 view-container" id="arrangementer-view">
+<div class="col-md-12 view-container fontFamily" id="arrangementer-view">
 
   <div class="row">
     <div class="col-md-12">
@@ -25,21 +25,19 @@
     </div>
   </div>
   <h2 ng-hide="((valgtScene == 'velg') && (valgtStatus == 'velg') && ((searchingString == undefined) || (searchingString == '')))">Søkeresultat</h2>
-
     <div class="row">
-
     <ul class="list-unstyled">
       <li ng-repeat="(key, value) in filtrertListe">
         <!--Dato-->
         <div class ="row">
           <div class="col-lg-12 dateDesign">
-            <h2 class="fontFamily fontSizeDate">{{key}}</h2>
+            <h2 class="fontSizeDate">{{key}}</h2>
           </div>
         </div>
         <ul class="list-unstyled">
           <li ng-repeat="(key, konsert) in value" ng-init="showAvvisForm = false">
 
-            <div class="row fontFamily pFontSize">
+            <div class="row pFontSize">
               <div class="col-lg-3 alignMiddle border-Right">
                 <p>{{konsert.artist}}</p>
               </div>
@@ -71,8 +69,6 @@
                 </form>
               <br>
             </div>
-
-
           </li>
         </ul>
       </li>
