--- a/public/arrangementer/arrangementer.view.html
+++ b/public/arrangementer/arrangementer.view.html
@@ -1,39 +1,45 @@
-<div class="col-md-12">
-  <h1>Arrangementer:</h1>
-  <input id="search" name="search" placeholder="Søk i arrangementer" type="search" ng-model="searchingString" ng-change="filterFunction()">
-  <br><br>
-  <select ng-model="valgtSjanger" ng-change="filterFunction()">
-    <option value="velg">Velg sjanger</option>
-    <option value="Alternativ">Alternativ</option>
-    <option value="Blues">Blues</option>
-    <option value="Country">Country</option>
-    <option value="Dance">Dance</option>
-    <option value="Elektronisk">Elektronisk</option>
-    <option value="Folk">Folk</option>
-    <option value="Hip Hop">Hip Hop</option>
-    <option value="Indie">Indie</option>
-    <option value="Jazz">Jazz</option>
-    <option value="Klassisk">Klassisk</option>
-    <option value="Norsk">Norsk</option>
-    <option value="Opera">Opera</option>
-    <option value="Pop">Pop</option>
-    <option value="R&amp;B">R&amp;B</option>
-    <option value="Reggae">Reggae</option>
-    <option value="Rock">Rock</option>
-  </select>
-  <select ng-model="valgtScene" ng-change="filterFunction()">
-    <option value="velg">Velg scene</option>
-    <option value="Edgar">Edgar</option>
-    <option value="Klubben">Klubben</option>
-    <option value="Knaus">Knaus</option>
-    <option value="Storsalen">Storsalen</option>
-  </select>
+<div class="col-md-12 fontFamily">
+  <div class="row">
+    <div class="col-md-12">
+      <h1>Arrangementer:</h1>
+      <input id="search" class="form-control italic" name="search" placeholder="Søk i arrangementer" type="search" ng-model="searchingString" ng-change="filterFunction()">
+      <br>
+    </div>
+    <div class="col-md-12 form-inline">
+      <select class="form-control" ng-model="valgtSjanger" ng-change="filterFunction()">
+        <option value="velg">Velg sjanger</option>
+        <option value="Alternativ">Alternativ</option>
+        <option value="Blues">Blues</option>
+        <option value="Country">Country</option>
+        <option value="Dance">Dance</option>
+        <option value="Elektronisk">Elektronisk</option>
+        <option value="Folk">Folk</option>
+        <option value="Hip Hop">Hip Hop</option>
+        <option value="Indie">Indie</option>
+        <option value="Jazz">Jazz</option>
+        <option value="Klassisk">Klassisk</option>
+        <option value="Norsk">Norsk</option>
+        <option value="Opera">Opera</option>
+        <option value="Pop">Pop</option>
+        <option value="R&amp;B">R&amp;B</option>
+        <option value="Reggae">Reggae</option>
+        <option value="Rock">Rock</option>
+      </select>
+      <select class="form-control" ng-model="valgtScene" ng-change="filterFunction()">
+        <option value="velg">Velg scene</option>
+        <option value="Edgar">Edgar</option>
+        <option value="Klubben">Klubben</option>
+        <option value="Knaus">Knaus</option>
+        <option value="Storsalen">Storsalen</option>
+      </select>
+
   <input type="checkbox" name="vehicle" ng-model="visTidligereArrangementer" ng-change="filterFunction()">Vis tidligere arrangementer
+  </div>
     <h2 ng-hide="((valgtScene == 'velg') && (valgtSjanger == 'velg') && ((searchingString == undefined) || (searchingString == '')))">Søkeresultat</h2>
-  <ul>
+  <ul class="list-unstyled">
     <li ng-repeat="(key, value) in filtrertListe">
       <h2>{{intToDateFunction(key).toDateString()}}</h2>
-      <ul>
+      <ul class="list-unstyled">
         <li ng-repeat="(key, konsert) in value" ng-init="showAvvisForm = false">
           <p><b>Artist:</b> {{konsert.artist}}</p>
           <p><b>Scene:</b> {{konsert.scene}}</p>
