--- a/public/arrangementer/arrangementer.view.html
+++ b/public/arrangementer/arrangementer.view.html
@@ -1,7 +1,7 @@
 <div class="col-md-12 fontFamily">
   <div class="row">
     <div class="col-md-12">
-      <h1>Arrangementer:</h1>
+      <h1>Arrangementer</h1>
       <input id="search" class="form-control italic" name="search" placeholder="Søk i arrangementer" type="search" ng-model="searchingString" ng-change="filterFunction()">
       <br>
     </div>
@@ -32,25 +32,46 @@
         <option value="Knaus">Knaus</option>
         <option value="Storsalen">Storsalen</option>
       </select>
-
   <input type="checkbox" name="vehicle" ng-model="visTidligereArrangementer" ng-change="filterFunction()">Vis tidligere arrangementer
   </div>
-    <h2 ng-hide="((valgtScene == 'velg') && (valgtSjanger == 'velg') && ((searchingString == undefined) || (searchingString == '')))">Søkeresultat</h2>
+
+  <h2 ng-hide="((valgtScene == 'velg') && (valgtSjanger == 'velg') && ((searchingString == undefined) || (searchingString == '')))">Søkeresultat</h2>
+
+  <div class="row">
   <ul class="list-unstyled">
     <li ng-repeat="(key, value) in filtrertListe">
-      <h2>{{intToDateFunction(key).toDateString()}}</h2>
+      <div class ="row">
+        <div class="col-lg-12 dateDesign">
+          <h2>{{intToDateFunction(key).toDateString()}}</h2>
+        </div>
+      </div>
       <ul class="list-unstyled">
         <li ng-repeat="(key, konsert) in value" ng-init="showAvvisForm = false">
-          <p><b>Artist:</b> {{konsert.artist}}</p>
-          <p><b>Scene:</b> {{konsert.scene}}</p>
-          <p><b>Tid:</b> {{konsert.tid}}</p>
-          <p><b>Billettpris:</b> {{konsert.billettpris}}</p>
-          <p><b>Sjanger:</b> {{konsert.sjanger}}</p>
-          <p><b>Status:</b> {{konsert.status}}</p>
-          <br>
-        </li>
-      </ul>
-    </li>
-  </ul>
-</div>
+          
+          <div class="row pFontSize">
+              <div class="col-lg-3 alignMiddle border-Right">
+                <p>{{konsert.artist}}</p>
+              </div>
+
+              <div class="col-lg-1 alignMiddle textAlign border-Right">
+                <p>{{konsert.tid}}</p>
+              </div>
+              <div class="col-lg-1 alignMiddle textAlign border-Right">
+                <p>{{konsert.billettpris}}</p>
+              </div>
+              <div class="col-lg-2 alignMiddle border-Right">
+                <p>{{konsert.sjanger}}</p>
+              </div>
+              <div class="col-lg-1 alignMiddle textAlign border-Right">
+                <p>{{konsert.scene}}</p>
+              </div>
+              <div class="col-lg-1 alignMiddle textAlign border-Right">
+                <p>{{konsert.status}}</p>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </div>
 </div>
