--- a/public/arrangementer/arrangementer.view.html
+++ b/public/arrangementer/arrangementer.view.html
@@ -64,11 +64,11 @@
               <div class="col-lg-3 alignMiddle textAlign border-Right">
                 <p>{{konsert.sjanger}}</p>
               </div>
-              <div class="col-lg-1 alignMiddle textAlign">
+              <div class="col-lg-1 alignMiddle textAlign border-Right">
                 <p>{{konsert.status}}</p>
               </div>
               <div class="col-lg-2">
-                <a ng-click="hasRapportFunction(key); updateModal(key, konsert)" href="#information-modal" target="_self" class="modal-link" data-toggle="modal"><button type="button" class="btn btn-default">Oversikt</button></a>
+                <a ng-click="hasRapportFunction(key); updateModal(key, konsert)" href="#information-modal" target="_self" class="modal-link" data-toggle="modal"><button type="button" class="btn btn-danger">Oversikt</button></a>
               </div>
             </div>
           </li>
