la til rapportoversikt script i index.html

--- a/public/index.html
+++ b/public/index.html
@@ -80,6 +80,7 @@
     <script src="login/login.controller.js" charset="utf-8"></script>
     <script src="ny-booking/ny-booking.controller.js" charset="utf-8"></script>
     <script src="bookingoversikt/bookingoversikt.controller.js" charset="utf-8"></script>
+     <script src="rapportoversikt/rapportoversikt.controller.js" charset="utf-8"></script>
     <script src="js/services/firebase.service.js" charset="utf-8"></script>
     <script src="js/services/spotify.service.js" charset="utf-8"></script>
   </body>
